# AgriFollower

./: .gitignore  .typerc  CLAUDE.md  LICENSE  NOTICE  README.md
docs/: environment.md  hardware_requirements.md  project_overview.md  rl_code_guide.md  roadmap.md  runbook.md  setup_process.md  troubleshooting.md
docs/rl_design/: 0_project_proposal.md  rl_reward_function.md  rl_state_space.md  rl_train_scenarios.md  rl_train_senarioes.md
src/greenhouse_sim/: package.xml  setup.cfg  setup.py
src/greenhouse_sim/launch/: greenhouse.launch.py  ros_ign_bridge.launch.py  spawn_scaled_model.launch.py
src/greenhouse_sim/scripts/: gen_greenhouse_world.py
src/greenhouse_sim/urdf/: ascamera_scaled.xacro  depth_cam_scaled.gazebo.xacro  lidar_scaled.gazebo.xacro  robot_scaled.gazebo.xacro  rosorin_scaled.xacro  wheel_scaled.xacro
src/greenhouse_sim/worlds/: greenhouse.sdf
src/rosorin_rl/: package.xml  setup.cfg  setup.py
src/rosorin_rl/config/: rl_params.yaml
src/rosorin_rl/launch/: rl_sim.launch.py
src/rosorin_rl/model/: .gitignore
src/rosorin_rl/rosorin_rl/: analyze_log.py  callbacks.py  eval_policy.py  eval_sweep.py  follow_env.py  geometry_utils.py  obs_pipeline.py  reward.py  target_controller_node.py  target_feature_node.py  train_sac.py
src/rosorin_rl/worlds_models/: worker_target.sdf
